manifests/overlays/postgres/dep-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dumbkv-app
spec:
  template:
    spec:
      containers:
        - name: dumbkv-container
          volumeMounts:
            - name: dumbkv-storage
              $patch: delete
      volumes:
        - name: dumbkv-storage
          $patch: delete
