manifests/overlays/postgres/postgres-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dumbkv-postgres
spec:
  serviceName: dumbkv-postgres-headless
  replicas: 1
  selector:
    matchLabels:
      app: dumbkv-postgres
  template:
    metadata:
      labels:
        app: dumbkv-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 15
            periodSeconds: 20
      volumeClaimTemplates:
        - metadata:
            name: postgres-storage
          spec:
            accessModes: ["ReadWriteOnce"]
            storageClassName: efs
            resources:
              requests:
                storage: 1Gi
