manifests/overlays/postgres/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-svc
spec:
  clusterIP: None
  selector:
    app: dumbkv-postgres
  ports:
    - port: 5432
      targetPort: 5432
