manifests/overlays/postgres/svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    type: postgres
