manifests/overlays/postgres/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  parentRefs:
    - name: dumbkv-gateway
      namespace: default
  hostnames:
    - postgres.shanana.shop
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: postgres-dumbkv-svc   # make sure you add the prefix since the svc will be created with prefix
          port: 8000
